[package]
name = "gaia-client-socket"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
gaia-socket-shared = { path = "../gaia-socket-shared" } # { git = "https://github.com/connorcarpenter/gaia-socket-shared" } #

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
laminar = { version = "0.3.2", git = "https://github.com/amethyst/laminar" }
crossbeam-channel = { version = "0.3" }