[package]
name = "gaia-client-socket-example"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib","rlib"]

[[bin]]
name = "index" # This is because cargo-web also picks up the static assets folder...
path = "src/main.rs"

[dependencies]
gaia-client-socket = { path = "../gaia-client-socket" } # { git = "https://github.com/connorcarpenter/gaia-client-socket" } #
gaia-socket-shared = { path = "../gaia-socket-shared" } # { git = "https://github.com/connorcarpenter/gaia-socket-shared" } #
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simple_logger = { version = "1.4" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web_logger = { version = "0.2" }
wasm-bindgen = { version = "0.2.45", features = [ "serde-serialize" ] }