[package]
name = "naia-client-socket"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
description = "Abstraction to expose common API over a UDP socket on Linux, and a unreliable WebRTC datachannel on the browser"
documentation = "https://github.com/connorcarpenter/naia-socket"
homepage = "https://github.com/connorcarpenter/naia-socket"
repository = "https://github.com/connorcarpenter/naia-socket"
readme = "../README.md"
keywords = ["wasm", "webrtc", "udp", "client", "webassembly", "web_sys", "networking"]
license = "MIT OR Apache-2.0"
categories = ["network-programming", "game-development", "wasm", "web-programming"]
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
log = "0.4"
naia-socket-shared = { version = "0.1.0", path = "../shared" }
cfg-if = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
url = "2.1.1"
wasm-bindgen = { version = "0.2.45", features = [ "serde-serialize" ] }
js-sys = "0.3"
web_sys = { version = "0.3.22", package = "web-sys", features = [
    "RtcConfiguration", "RtcDataChannel", "RtcDataChannelInit", "RtcDataChannelType",
    "RtcIceCandidate", "RtcIceCandidateInit",
    "RtcPeerConnection", "RtcSdpType",  "RtcSessionDescription", "RtcSessionDescriptionInit",
    "XmlHttpRequest", "XmlHttpRequestEventTarget", "MessageEvent", "ProgressEvent", "ErrorEvent", "Blob" ] }
serde = "^1.0.59"
serde_derive = "^1.0.59"