[package]
name = "naia-server-socket"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
description = "An abstraction to provide a common API over either a UDP socket or a service that can establish WebRTC connections"
documentation = "https://github.com/connorcarpenter/naia-socket"
homepage = "https://github.com/connorcarpenter/naia-socket"
repository = "https://github.com/connorcarpenter/naia-socket"
readme = "../README.md"
keywords = ["webrtc", "udp", "client", "webassembly", "webrt-unreliable", "networking"]
license = "MIT OR Apache-2.0"
categories = ["network-programming", "game-development", "wasm", "web-programming"]
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[features]
use-udp = [ ]
use-webrtc = [ "webrtc-unreliable", "clap", "hyper", "tokio", "futures-channel",
    "futures-core", "futures-util" ]

[dependencies]
naia-socket-shared = { version = "0.1.0", path = "../shared" }
log = "0.4"
cfg-if = "*"
webrtc-unreliable = { git = "https://github.com/kyren/webrtc-unreliable", optional = true }
clap = { version = "2.32", optional = true}
hyper = { version = "0.13", features = ["stream"], optional = true }
tokio = { version = "0.2", features = ["macros"], optional = true }
futures-channel = { version = "0.3", features = ["sink"], optional = true }
futures-core = { version = "0.3", optional = true }
futures-sink = { version = "0.3", optional = true }
futures-util = { version = "0.3", features = ["sink"], optional = true }