[package]
name = "naia-socket-shared"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
edition = "2018"
description = "Common data types shared between naia-server-socket & naia-client-socket crates"
license = "MIT"

[dependencies]
log = "0.4"
cfg-if = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.45", features = [ ] }
js-sys = "0.3"