[package]
name = "naia-client-socket-example"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
version = "0.0.0"
workspace = "../../"
publish = false
edition = "2018"

[lib]
crate-type = ["cdylib","rlib"]

[[bin]]
name = "index" # This is because cargo-web also picks up the static assets folder...
path = "src/main.rs"

[dependencies]
naia-client-socket = { path = "../../client" }
log = "0.4"
cfg-if = "*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simple_logger = { version = "1.4" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web_logger = { version = "0.2" }
wasm-bindgen = { version = "0.2.45", features = [ "serde-serialize" ] }
web-sys = { version = "0.3.4", features = [ 'Window' ] }