[package]
name = "naia-server-socket-example"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
version = "0.0.0"
workspace = "../../"
publish = false
edition = "2018"

[features]
use-udp = [ "naia-server-socket/use-udp" ]
use-webrtc = [ "naia-server-socket/use-webrtc" ]

[dependencies]
naia-server-socket = { path = "../../server" }
tokio = { version = "0.2", features = ["macros"] }
log = "0.4"
simple_logger = { version = "1.4" }