[package]
name = "naia-client-socket-miniquad-example"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "naia-client-socket-miniquad-example"
path = "src/main.rs"

[dependencies]
miniquad = { version = "0.2", features = ["log-impl"] }