[package]
name = "naia-client-socket-miniquad-example"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "naia-client-socket-miniquad-example"
path = "src/main.rs"

[features]
multithread = [ "naia-client-socket/multithread" ]

[dependencies]
# log = "0.4.6"
cfg-if = "0.1.10"
# wasm-logger = { version = "0.2.0" }
naia-client-socket = { path = "../../../client", features = [ "mquad" ] }
miniquad = { version = "0.2", features = ["log-impl"] }